[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charted"
version = "1.0.1"
description = "Charted is a zero dependency SVG chart generator that aims to provide a simple interface for generating beautiful and customisable graphs. This project is inspired by chart libraries like mermaid.js."
authors = [{ name = "Andryo Marzuki", email = "andryo@mrzk.io" }]
readme = "README.md"
requires-python = ">=3.10, <3.15"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "ipython>=8.24.0",
    "ruff>=0.9.0",
    "tox>=4.15.1",
    "lxml>=5.0.0",
    "coverage>=7.5.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
]
docs = [
    "sphinx>=7.3.7",
    "furo>=2024.1.29",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["charted"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501", "E203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/*" = ["E402"]
"docs/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
charted = "charted.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["charted"]
