[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charted"
version = "1.0.5"
description = "Charted is a zero dependency SVG chart generator that aims to provide a simple interface for generating beautiful and customisable graphs. This project is inspired by chart libraries like mermaid.js."
authors = [{ name = "Andryo Marzuki", email = "andryo@mrzk.io" }]
readme = "README.md"
requires-python = ">=3.10, <3.15"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["svg", "chart", "graph", "visualization", "zero-dependency"]
dependencies = []

[project.urls]
homepage = "https://github.com/marzukia/charted"
repository = "https://github.com/marzukia/charted"
documentation = "https://charted.mrzk.io"
"Bug Tracker" = "https://github.com/marzukia/charted/issues"
changelog = "https://github.com/marzukia/charted/blob/main/CHANGELOG.md"

[project.optional-dependencies]
png = ["cairosvg>=2.7.0"]
dev = [
    "pytest>=8.2.1",
    "ipython>=8.24.0",
    "ruff>=0.9.0",
    "tox>=4.15.1",
    "lxml>=5.0.0",
    "coverage>=7.5.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "tox-uv>=1.21.0",
    "hypothesis>=6.0.0",
    "typing_extensions>=4.0.0; python_version < '3.11'",
    # PNG visual testing dependencies (dev/test only)
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "cairosvg>=2.7.0",
    # Mutation testing
    "mutmut>=2.0.0",
    # Performance benchmarks
    "pytest-benchmark>=4.0.0",
    # Publishing
    "build>=1.5.0",
    "twine>=6.2.0",
]
duckdb = ["duckdb>=0.9"]
docs = [
    "sphinx>=7.3.7",
    "furo>=2024.1.29",
    "sphinx-design>=0.6.0",
    "myst-parser>=3.0.0",
]
mcp = ["mcp>=1.0"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["charted"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501", "E203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/*" = ["E402"]
"docs/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
charted = "charted.__main__:main"
charted-mcp = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["charted", "duckdb_ext", "mcp_server"]
# Ship the PEP 561 marker and the runtime-loaded font JSON definitions
# (loaded via a __file__-relative path), which are not Python modules and
# so are not picked up by `packages` alone.
force-include = { "charted/py.typed" = "charted/py.typed" }
artifacts = ["charted/fonts/definitions/*.json"]
